<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tour_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/tour"
        android:textAppearance="@style/RegularTextStyle"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tour_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:maxLines="1"
        android:textAppearance="@style/RegularTextStyle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/tour_title"
        tools:text="100 000p" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fuel_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/fuel"
        android:textAppearance="@style/RegularTextStyle"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tour_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fuel_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:maxLines="1"
        android:textAppearance="@style/RegularTextStyle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/fuel_title"
        tools:text="100 000p" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/service_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/service"
        android:textAppearance="@style/RegularTextStyle"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fuel_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/service_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:maxLines="1"
        android:textAppearance="@style/RegularTextStyle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/service_title"
        tools:text="100 000p" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/total"
        android:textAppearance="@style/RegularTextStyle"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:maxLines="1"
        android:textAppearance="@style/SemiBolTextStyle"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/total_title"
        tools:text="100 000p" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:enabled="true"
        android:paddingVertical="@dimen/default_margin"
        android:text="@string/pay"
        android:textAllCaps="false"
        android:textAppearance="@style/SemiBolTextStyle"
        android:textSize="14sp"
        app:backgroundTint="@color/blue"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_title"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>