<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginVertical="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/f_f_title"
        android:textAppearance="@style/RegularTextStyle"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/image_pager"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:layout_marginVertical="@dimen/default_margin"
        android:orientation="horizontal"
        android:scrollIndicators="bottom"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:paddingVertical="@dimen/small_margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/image_pager"
        app:layout_constraintEnd_toEndOf="@id/image_pager"
        app:layout_constraintStart_toStartOf="@id/image_pager">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_indicator"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="fill"
            app:tabIndicator="@drawable/tab_selector"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorColor="@color/black"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorGravity="center"
            app:tabIndicatorHeight="10dp"
            app:tabMode="fixed" />

    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/rating_layout"
        layout="@layout/rating_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_pager" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_hotel_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginVertical="@dimen/default_margin"
        android:gravity="start"
        android:maxLines="2"
        android:textAppearance="@style/BoldTextStyle"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/rating_layout"
        tools:text="TyanFuYan Resort" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_hotel_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:gravity="start"
        android:maxLines="2"
        android:textAppearance="@style/RegularTextStyle"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_hotel_name"
        tools:text="Сочинская набережная дом 4. Постучать трижды" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hotel_min_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginVertical="@dimen/default_margin"
        android:gravity="start"
        android:maxLines="1"
        android:textAppearance="@style/BoldTextStyle"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hotel_address"
        tools:text="от 200000 Р" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hotel_min_price_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:gravity="start"
        android:maxLines="1"
        android:textAppearance="@style/RegularTextStyle"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/hotel_min_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/hotel_min_price"
        tools:text="За тур с перелётом" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:gravity="start"
        android:text="@string/f_f_title_about"
        android:textAppearance="@style/RegularTextStyle"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/hotel_min_price" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        app:flow_firstHorizontalStyle="spread"
        app:flow_horizontalBias="0"
        app:flow_wrapMode="chain"
        app:layout_constraintTop_toBottomOf="@id/tv_about_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="start"
        android:textAppearance="@style/RegularTextStyle"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/flow_group"
        tools:text="Отель вип класса, ваще топчик, всё олл инклюзив, хочешь купаться,
         купайся, хочешь есть - ешь,
         хочешь загорать - загорай,
          НО ДО ДЕДЛАЙНА ДОЛЖЕН УСПЕТЬ ВСЁ СДАТЬ!" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/includes_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        tools:listitem="@layout/includes_opt_item"
        tools:itemCount="3"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/very_big_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:enabled="true"
        android:text="@string/f_f_button_text"
        android:textAllCaps="false"
        android:textAppearance="@style/SemiBolTextStyle"
        android:textSize="14sp"
        app:backgroundTint="@color/blue"
        app:cornerRadius="15dp"
        android:paddingVertical="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includes_options" />

</androidx.constraintlayout.widget.ConstraintLayout>
